--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,133 @@
-/* Font in design files is Raleway */
-
-/* background-image in Design 👇
- url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg'); */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+.nav-links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+  margin: 2%;
+}
+.nav-links a {
+  text-decoration: none;
+  color: black;
+  padding-bottom: 30%;
+  font-size: 1.5rem;
+  border-right: 1px solid black;
+  padding-bottom: 1%;
+  display: inline-block;
+}
+.nav-links a:first-of-type {
+  font-weight: bold;
+}
+.title-container {
+  width: 80%;
+  height: 100vh;
+  background: url(/assets/home.png);
+  margin-left: 10%;
+}
+.title-container .home-text {
+  padding-top: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.title-container .home-text h1 {
+  font-size: 8rem;
+  text-align: center;
+  color: white;
+}
+.middle-divide {
+  margin-top: 3%;
+  margin-bottom: 2%;
+  margin-left: 8%;
+  margin-right: 8%;
+}
+.artists-container {
+  display: flex;
+}
