--- a/css/index.css
+++ b/css/index.css
@@ -86,22 +86,34 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
-.nav-links {
-  display: flex;
-  justify-content: center;
-  flex-wrap: nowrap;
-  margin: 2%;
+h2 {
+  font-size: 2rem;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
-.nav-links a {
+h2 a {
+  text-decoration: none;
+  color: black;
+}
+p {
+  font-weight: 600;
+}
+nav {
+  text-align: center;
+}
+nav a {
   text-decoration: none;
   color: black;
   padding-bottom: 30%;
   font-size: 1.5rem;
   border-right: 1px solid black;
+  line-height: 100%;
   padding-bottom: 1%;
+  padding-right: 3%;
+  padding-left: 3%;
   display: inline-block;
 }
-.nav-links a:first-of-type {
+nav a:first-of-type {
   font-weight: bold;
 }
 .title-container {
@@ -130,4 +142,14 @@ video {
 }
 .artists-container {
   display: flex;
+  justify-content: center;
+}
+.artists-container .artist {
+  text-align: center;
+  margin-right: 10%;
+}
+.artists-container .artist .bio {
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 1%;
 }
