--- a/less/main.less
+++ b/less/main.less
@@ -14,6 +14,7 @@
         text-align: center;
         color: white;
         }
+        
     }
     
 }
@@ -25,4 +26,15 @@
 }
 .artists-container{
     display: flex;
+    justify-content: center;
+    .artist{
+        text-align: center;
+        margin-right: 10%;
+        .bio{
+            margin-left: 15%;
+            margin-right: 15%;
+            margin-top: 1%;
+        }
+
+    }
 }
