--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,19 +1,19 @@
-.nav-links{
-    display: flex;
-    justify-content: center;
-    flex-wrap: nowrap;
-    margin: 2%;
-       a{
-        text-decoration: none;
-        color: black;
-        padding-bottom: 30%;
-        font-size: 1.5rem;
-        border-right: 1px solid black;
-        padding-bottom: 1%;
-        display: inline-block;
+nav{
+    text-align: center;
+
+    a{
+    text-decoration: none;
+    color: black;
+    padding-bottom: 30%;
+    font-size: 1.5rem;
+    border-right: 1px solid black;
+    line-height: 100%;
+    padding-bottom: 1%;
+    padding-right: 3%;
+    padding-left: 3%;
+    display: inline-block;
         &:first-of-type{
             font-weight: bold;
-
         }
     }
 }
