Made changes to CSS

--- a/less/main.less
+++ b/less/main.less
@@ -1,20 +1,14 @@
 .title-container{
-    width: 80%;
-    height: 100vh;
+    .home-container{
+    color:white;
+    background-size:cover;
+    background-position:center;
+    width:80%;
+    height: 100%;
+    text-align:center;
+    padding:4% 0;
     background: url(/assets/home.png);
     margin-left: 10%;
-    .home-text{
-    padding-top: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-        h1{
-        font-size: 8rem;
-        text-align: center;
-        color: white;
-        }
-        
     }
     
 }
