--- a/css/index.css
+++ b/css/index.css
@@ -98,41 +98,35 @@ h2 a {
 p {
   font-weight: 600;
 }
+h1 {
+  font-size: 8rem;
+  text-align: center;
+  color: white;
+}
 nav {
   text-align: center;
 }
 nav a {
   text-decoration: none;
   color: black;
-  padding-bottom: 30%;
   font-size: 1.5rem;
-  border-right: 1px solid black;
   line-height: 100%;
-  padding-bottom: 1%;
-  padding-right: 3%;
-  padding-left: 3%;
+  margin-bottom: 3%;
   display: inline-block;
 }
 nav a:first-of-type {
   font-weight: bold;
 }
-.title-container {
+.title-container .home-container {
+  color: white;
+  background-size: cover;
+  background-position: center;
   width: 80%;
-  height: 100vh;
+  height: 100%;
+  text-align: center;
+  padding: 4% 0;
   background: url(/assets/home.png);
   margin-left: 10%;
-}
-.title-container .home-text {
-  padding-top: 20%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-.title-container .home-text h1 {
-  font-size: 8rem;
-  text-align: center;
-  color: white;
 }
 .middle-divide {
   margin-top: 3%;
