--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,13 +4,9 @@ nav{
     a{
     text-decoration: none;
     color: black;
-    padding-bottom: 30%;
     font-size: 1.5rem;
-    border-right: 1px solid black;
     line-height: 100%;
-    padding-bottom: 1%;
-    padding-right: 3%;
-    padding-left: 3%;
+    margin-bottom: 3%;
     display: inline-block;
         &:first-of-type{
             font-weight: bold;
