--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,14 @@
+.middle-line {
+  margin-top: 3%;
+  margin-bottom: 2%;
+  margin-left: 8%;
+  margin-right: 8%;
+}
+.set-bio {
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 1%;
+}
 html,
 body,
 div,
