--- a/less/main.less
+++ b/less/main.less
@@ -10,14 +10,11 @@
     background: url(/assets/home.png);
     margin-left: 10%;
     }
-    
 }
 .middle-divide{
-    margin-top: 3%;
-    margin-bottom: 2%;
-    margin-left: 8%;
-    margin-right: 8%;
+    .middle-line();
 }
+
 .artists-container{
     display: flex;
     justify-content: center;
@@ -25,10 +22,8 @@
         text-align: center;
         margin-right: 10%;
         .bio{
-            margin-left: 15%;
-            margin-right: 15%;
-            margin-top: 1%;
+           .set-bio();
         }
 
     }
-}
+}      
