--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,16 +1,20 @@
-// .custom-btn(@bg-color:#white, @width:200px, @font-color:white){
-//     display: block;
-//    background-color: @bg-color;
-//    margin: 0 10px 20px;
-//    cursor: pointer;
-//    width: @width;
-//    height: 45px;
-//    font-size: 2rem;
-//    border-radius: 10px;
-//    color: @font-color;
+.btn-style(@bg-color:white, @txt-color:white, @pad:15px 32px){
+    background-color: @bg-color;
+    color: @txt-color;
+    padding: @pad;
+}
 
-   
-   
+.middle-line{
+    margin-top: 3%;
+    margin-bottom: 2%;
+    margin-left: 8%;
+    margin-right: 8%;
+}
+   .set-bio{
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 1%;
+   }
 
 
 //    padding-top: 20%;
