--- a/less/general.less
+++ b/less/general.less
@@ -1,3 +1,13 @@
+html{
+    body{
+        height: 100%;
+    }
+}
+
+
+
+
+
 h2{
     font-size: 2rem;
     margin-top: 2%;
@@ -13,7 +23,7 @@ p{
 
 
 h1{
-    font-size: 8rem;
+    font-size: 5rem;
     text-align: center;
     color: white;
     }
