--- a/less/main.less
+++ b/less/main.less
@@ -1,13 +1,15 @@
 .title-container{
+    background: url(/assets/home.png);
+    background-size:auto;
+    background-position:center;
+    padding-bottom: 5%;
+    margin-left: 20%;
+    margin-right: 20%;
     .home-container{
     color:white;
-    background-size:cover;
-    background-position:center;
     width:80%;
-    height: 100%;
     text-align:center;
-    padding:4% 0;
-    background: url(/assets/home.png);
+    padding:10% 0;
     margin-left: 10%;
     }
 }
