--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,15 +1,14 @@
-.btn-style(@bg-color:white, @txt-color:white, @pad:15px 32px){
-    background-color: @bg-color;
-    color: @txt-color;
-    padding: @pad;
-}
+.btn-style(@bg-color,@borderRadi){
+    background-color:@bg-color;
+    border-radius: @borderRadi;
+    }
 
-.middle-line{
-    margin-top: 3%;
-    margin-bottom: 2%;
-    margin-left: 8%;
-    margin-right: 8%;
-}
+    .middleLine{
+        margin-top: 3%;
+        margin-bottom: 2%;
+        margin-left: 8%;
+        margin-right: 8%;
+    }
    .set-bio{
     margin-left: 15%;
     margin-right: 15%;
@@ -17,8 +16,4 @@
    }
 
 
-//    padding-top: 20%;
-//    display: flex;
-//    justify-content: center;
-//    align-items: center;
-//    text-align: center;
+   @phone: ~"(max-width: 500px)";
