--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-.middle-line {
+.middleLine {
   margin-top: 3%;
   margin-bottom: 2%;
   margin-left: 8%;
@@ -119,6 +119,8 @@ h1 {
 }
 nav {
   text-align: center;
+  margin-top: 2%;
+  margin-bottom: -1%;
 }
 nav a {
   text-decoration: none;
@@ -136,8 +138,8 @@ nav a:first-of-type {
   background-size: auto;
   background-position: center;
   padding-bottom: 5%;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 .title-container .home-container {
   color: white;
@@ -146,7 +148,16 @@ nav a:first-of-type {
   padding: 10% 0;
   margin-left: 10%;
 }
-.middle-divide {
+.title-container .my-btn {
+  background-color: white;
+  border-radius: 6%;
+  box-shadow: 50% 50%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+#line .middle-divide {
   margin-top: 3%;
   margin-bottom: 2%;
   margin-left: 8%;
