--- a/less/main.less
+++ b/less/main.less
@@ -3,8 +3,8 @@
     background-size:auto;
     background-position:center;
     padding-bottom: 5%;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 25%;
+    margin-right: 25%;
     .home-container{
     color:white;
     width:80%;
@@ -12,9 +12,19 @@
     padding:10% 0;
     margin-left: 10%;
     }
+    .my-btn{
+        .btn-style(white, 6%,);
+        box-shadow: 50% 50%;
+        padding-top: 1%;
+        padding-bottom:1%;
+        padding-left: 3%;
+        padding-right: 3%
+    }
 }
-.middle-divide{
-    .middle-line();
+#line{
+    .middle-divide{
+      .middleLine();
+    }
 }
 
 .artists-container{
