--- a/less/main.less
+++ b/less/main.less
@@ -5,6 +5,11 @@
     padding-bottom: 5%;
     margin-left: 25%;
     margin-right: 25%;
+    @media @phone{
+        background-position: intial;
+        margin-left:0%;
+        margin-right: 0%;
+    }
     .home-container{
     color:white;
     width:80%;
