--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,6 +2,12 @@ nav{
     text-align: center;
     margin-top: 2%;
     margin-bottom: -1%;
+    @media @phone{
+        margin-left: 30%;
+        margin-top: 5%;
+        margin-bottom: 5%;
+    
+    }
 
     a{
     text-decoration: none;
