--- a/less/general.less
+++ b/less/general.less
@@ -1,6 +1,12 @@
 html{
     body{
         height: 100%;
+        img{
+            @media @phone{
+               width: 100%;
+               height: auto;
+            }
+        }
     }
 }
 
@@ -12,13 +18,22 @@ h2{
     font-size: 2rem;
     margin-top: 2%;
     margin-bottom: 2%;
+    @media @phone{
+        font-size: 1.3rem;
+        margin-right: 2%;
+    }
     a{
         text-decoration: none;
         color: black;
+
     }
 }
 p{
     font-weight:600;
+    @media @phone{
+        padding-bottom: 30%;
+        font-size: .7rem;
+    }
 }
 
 
